backends/libinput: clamp tablet and touch coordinates to target output

Apparently, some devices can trigger events outside of their normal bounds, and that
can have some problematic side-effects, like unintentionally changing the active output.

BUG: 512672